--- a/web/corso.html
+++ b/web/corso.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Account</a>
             <link rel="import" href="index.html">
         </nav>
     </header>
-
                 <h1>Corsi</h1>
                 <section v-if="isAdmin==1">
                 <table class="table table-bordered" >
