corso con vari metodi, ma non prende db

--- a/web/corso.html
+++ b/web/corso.html
@@ -15,7 +15,7 @@
             <link rel="import" href="index.html">
         </nav>
     </header>
-    <article>
+    <article>/////
                <h1>Admin</h1>
                 <section>
                     <table class="table">
