--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,6 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./web/style.css">
     <title>Homepage</title>
 </head>
 <body>
@@ -14,25 +13,34 @@
     <!--barra di navigazione-->
     <header>
         <nav>
-            <ul>
-                <li v-if="isLogged()" >
-                    <a class="nav-link" href="corso.html">Corsi</a>
+            <ul v-if="isLogged()">
+                <li>
+                    <a href="corso.html">Admin</a>
                     <link rel="import" href="corso.html">
                 </li>
-                <li v-if="isLogged()" class="nav-item">
-                    <a class="nav-link" href="#">Le tue prenotazioni</a>
+                <li>
+                    <a href="#">Le tue prenotazioni</a>
+                </li>
+                <li>
+                    <a v-if="isLogged()" v-on:click="logout" href="#" >Logout</a>
                 </li>
             </ul>
+            <h3 v-else><a href="login.html">Login</a></h3>
+        </nav>
 
+        <h1 v-if="logged">Benvenuto! {{utente.username}}</h1>
+        <h1 v-else>Benvenuto!</h1>
+
+            <!--
             <div class="container-fluid" v-if="!isLogged()">
                 <div class="row">
                     <div class="col-md-5">
 
-                        <!--login-->
+                        <!-login->
                         <h1>Login</h1>
                         <div class="input-group" >
                             <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                            <p> Login: <input class="form-control" v-model="utente.username" name="username" type="text" required> </p> <!-- controllo inserimento input con required-->
+                            <p> Login: <input class="form-control" v-model="utente.username" name="username" type="text" required> </p> <!- controllo inserimento input con required->
                         </div>
                         <div class="input-group">
                             <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
@@ -41,7 +49,7 @@
                         <button @click="login" type="button">Login</button>
                         <p class="text-center">Not a member yet?<a href="#">Sign up</a></p>
                         <p v-if="!logged" >{{err}}</p>
-                        <!-- sign in-->
+                        <!- sign in->
                         <div class="col-md-5">
                             <h2>Sign in</h2>
                             <div class="input-group" >
@@ -67,18 +75,20 @@
                 <p> Ciao {{utente.username}}</p>
                 <a v-if="isLogged()" v-on:click="logout" href="#" >Logout</a>
             </div>
-        </nav>
+
+            -->
+
     </header>
 
 
     <article>
 
 
-        <!-- tabella dopo login e sign in Ripetizioni-->
-        <section>
-            <p>sessione -> {{ sessione }}</p>
-            <p>Username -> {{utente.username}}</p>
-            <table class="table table-bordered" v-if="isLogged()">
+        <!-- tabella Ripetizioni-->
+        <section v-if="logged">
+            <!--<p>sessione -> {{ sessione }}</p>
+            <p>Username -> {{utente.username}}</p>-->
+            <table class="table table-bordered">
                 <tr>
                     <th scope="col"></th>
                     <th scope="col">Corso</th>
@@ -95,28 +105,6 @@
                 </tr>
             </table>
         </section>
-
-
-        <!-- utente non loggato-->
-        <section v-if="!isLogged()">
-            <table class="table table-bordered" >
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Corso</th>
-                    <th scope="col">Docente</th>
-                    <th scope="col">Ripetizione</th>
-                    <th scope="col">Stato</th>
-                </tr>
-                <tr v-for="(rip,i) in ripetizioni">
-                    <th scope="row">{{incrementIndex(i)}}</th>
-                    <td>{{rip.id_corso}}</td>
-                    <td>{{rip.id_rip}}</td>
-                    <td>{{rip.id_docente}}</td>
-                    <td>{{rip.stato}}</td>
-                </tr>
-            </table>
-        </section>
-
 
     </article>
 </div>
