homepage con tabella

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,6 @@
             <ul v-if="isLogged()">
                 <li>
                     <a href="corso.html">Admin</a>
-                    <link rel="import" href="corso.html">
                 </li>
                 <li>
                     <a href="#">Le tue prenotazioni</a>
@@ -80,10 +79,10 @@
 
     </header>
 
-
     <article>
         <!-- tabella Ripetizioni-->
-        <section v-if="logged">
+        <p>prova prova</p>
+        <section>
             <!--<p>sessione -> {{ sessione }}</p>
             <p>Username -> {{utente.username}}</p>-->
             <table class="table table-bordered">
@@ -94,8 +93,8 @@
                     <th scope="col">Ripetizione</th>
                     <th scope="col">Stato</th>
                 </tr>
-                <tr v-for="(rip,i) in ripetizioni">
-                    <th scope="row">{{incrementIndex(i)}}</th>
+                <tr v-for="rip in ripetizioni" :id="rip.id_corso">
+                    <th scope="col"></th>
                     <td>{{rip.id_corso}}</td>
                     <td>{{rip.id_rip}}</td>
                     <td>{{rip.id_docente}}</td>
@@ -106,6 +105,156 @@
 
     </article>
 </div>
-<script src="scripts.js"></script>
+<script>
+    var app = new Vue ({
+        el: '#app',
+        data: {
+            logged: false,
+            sessione: '',
+            ripetizioni: [],
+            corsi: [],
+            docenti: [],
+            utente: {
+                username: '',
+                password: '',
+                amministratore: false
+            },
+            link: '/TWEBIUM/MyServlet',
+            link2: '/TWEBIUM/HomeServlet',
+            err: null,
+            loading: false
+        },
+        mounted(){
+            this.init();
+        },
+        methods: {
+            init:function(){//commitff
+                var self = this;
+                $.post(this.link2, {action:'INIT'}, function(data) {
+                    data = JSON.parse(data);
+
+                    if(data[0]===true){//sessione attiva login effettuato
+                        self.utente = data[1];
+                        //self.corsi = data[2];
+                        self.ripetizioni = data[2];
+                        self.logged =true;
+                    }
+                    else{
+                        self.ripetizioni = data[0];
+                        self.logged=false;
+                        self.loading = true;
+                    }
+                });
+            },
+            incrementIndex: function (index) {//commit
+                return index + 1;
+            },
+            login: function () {
+                var self = this;
+                if (self.sessione === '') {
+                    $.post(this.link, {
+                            action: 'LOGIN',
+                            username: this.utente.username,
+                            password: this.utente.password
+                        },
+                        function (data) {
+                            self.err = null;
+                            self.utente = data[0];
+                            self.sessione = data[1];
+
+                            if (self.utente.username === "") {
+                                self.logged = false;
+                                self.err = "Nome utente o password errati."
+                            } else {
+                                self.logged = true;
+                                self.ripetizioni = data[2];
+                            }
+                        });
+                } else {
+                    $.post(this.link, {
+                            action: 'LOGIN',
+                            username: this.utente.username,
+                            password: this.utente.password,
+                            sessione: this.sessione
+                        }, function (data) {
+                            this.loading = true;
+                            self.err = null;
+                            self.utente = data[0];
+                            self.sessione = data[1];
+
+                            if (self.utente.username === "") {
+                                self.logged = false;
+                                self.err = "Nome utente o password errati."
+                            } else {
+                                self.ripetizioni = data[2];
+                                self.logged = true;
+
+                            }
+                        }
+                    );
+                }
+            },
+            signin: function () {
+                var self=this;
+
+                if (this.sessione === '') {
+                    $.post(this.link, {
+                            action: 'SIGNIN',
+                            username: this.utente.username,
+                            password: this.utente.password,
+                            amministratore: this.utente.amministratore
+                        },
+                        function (data) {
+                            self.utente = data[0];
+                            self.sessione = data[1];
+
+                            if (self.utente.username !== "") {
+                                self.logged = true;
+                                self.ripetizioni = data[2];
+
+                            }
+                            else{
+                                self.err="Nome Utente già utilizzato"
+                            }
+                        });
+                } else {
+                    $.post(this.link, {
+                            action: 'SIGNIN',
+                            username: this.utente.username,
+                            password: this.utente.password,
+                            amministratore: this.utente.amministratore,
+                            sessione: this.sessione
+                        },
+                        function (data) {
+                            self.utente = data[0];
+                            self.sessione = data[1];
+
+                            if (self.utente.username !== "") {
+                                self.logged = true;
+                                self.ripetizioni = data[2];
+
+                            }
+                            else{
+                                self.err="Nome Utente già utilizzato"
+                            }
+                        });
+                }
+            },
+            logout:function(){
+                $.post(this.link,{
+                        action: 'LOGOUT'
+                    }
+                );
+                this.logged=false;
+                window.location.reload();
+            },
+            isLogged:function(){
+                return this.logged;
+            },
+
+
+        }
+    });
+</script>
 </body>
 </html>
