--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul v-if="isLogged()">
                 <li>
-                    <a href="corso.html">Admin</a>
+                    <a href="admin.html">Admin</a>
                 </li>
                 <li>
                     <a href="#">Le tue prenotazioni</a>
