--- a/web/admin.html
+++ b/web/admin.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>corsi</title>
 </head>
-<div id="corsi" class="col s12 center">
+<div id="admin" class="col s12 center">
     <header>
         <nav>
             <a class="nav-link" href="index.html">Home</a>
@@ -19,17 +19,15 @@
 
                <h1>Corsi</h1>
                 <section>
-                <table class="table">
-                <thead class="table table-bordered" >
+                <table>
                     <tr>
                         <th scope="col">Titolo corso</th>
                     </tr>
-                </thead>
                     <tr v-for="corso in corsi">
                         <td>{{corso.titolo}}</td>
-                  <!--      <td>  <button v-on:click="rimuoviCorso(corso.titolo)" value="Delete" type="button">Elimina</button></td>-->
+                  <!--   <td>  <button v-on:click="rimuoviCorso(corso.titolo)" value="Delete" type="button">Elimina</button></td>-->
                     </tr>
-                    </table>
+                </table>
                 </section>
     </article>
 <!--
@@ -135,20 +133,14 @@
             this.rimuoviInsegnamenti();*/
         },
         methods: {
-            incrementIndex: function (index) {//commit
-                return index + 1;
-            },
             getCorsi: function () {
                 var self = this;
                 $.get(this.link, {
-                        action: 'SHOWCORSO',
-
+                        action: 'SHOWCORSO'
                     },
                     function (data) {
-                        data = JSON.parse(data);
                         console.log(data[0]);
                         self.corsi=data[0];
-
                     })
             },
             /*aggiungi corso
