--- a/web/admin.html
+++ b/web/admin.html
@@ -16,31 +16,30 @@
     </header>
             <!-- corso-->
     <article>
-
-               <h1>Corsi</h1>
+            <h1>Corsi</h1>
                 <section>
-                <table>
+                <table class="table table-bordered">
                     <tr>
+                        <th scope="col"></th>
                         <th scope="col">Titolo corso</th>
                     </tr>
                     <tr v-for="corso in corsi">
+                        <th scope="col"></th>
                         <td>{{corso.titolo}}</td>
-                  <!--   <td>  <button v-on:click="rimuoviCorso(corso.titolo)" value="Delete" type="button">Elimina</button></td>-->
+                       <!-- <td>  <button v-on:click="rimuoviCorso(corso.titolo)" value="Delete" type="button">Elimina</button></td>-->
                     </tr>
                 </table>
                 </section>
     </article>
-<!--
                 <div class="modal-footer">
                     <input type="titolo" class="form-control"  v-model="corsi.titolo" id="titolo">
                     <label for="titolo">Titolo</label>
                     <button @click="InserisciCorso" type="button">Inserisci corso</button>
                 </div>
 
--->
 
-            <!-- docenti
-                <h2>Docenti</h2>
+            <!-- docenti-->
+        <h2>Docenti</h2>
                 <section>
                 <table class="table table-bordered">
                   <tr>
@@ -48,16 +47,14 @@
                     <th scope="col">Nome</th>
                     <th scope="col">Cognome</th>
                     </tr>
-                <tr v-for="(doc,i) in docenti">
-                    <th scope="row">{{incrementIndex(i)}}</th>
+                <tr v-for="doc in docenti">
+                        <th scope="col"></th>
                         <td>{{doc.nome}}</td>
                         <td>{{doc.cognome}}</td>
-                        <td>  <button v-on:click="rimuoviDocenti(doc.nome, doc.cognome)" value="Delete" type="button">Elimina</button></td>
-
+                       <!-- <td>  <button v-on:click="rimuoviDocenti(doc.nome, doc.cognome)" value="Delete" type="button">Elimina</button></td>-->
                 </tr>
                 </table>
                 </section>
-
                 <div class="modal-footer">
                      <input type="nome" class="form-control"  v-model="docenti.nome" id="nome">
                      <label for="nome">Nome</label>
@@ -65,8 +62,9 @@
                      <label for="cognome">Cognome</label>
                      <button @click="InserisciDocenti" type="button">Inserisci docenti</button>
                 </div>
--->
-     <!--insegnamenti
+
+
+        <!--insegnamenti -->
                 <h2>Insegnamenti</h2>
                 <section>
                 <table class="table table-bordered">
@@ -75,15 +73,14 @@
                         <th scope="col">id_corso</th>
                         <th scope="col">id_docente</th>
                     </tr>
-                    <tr v-for="(insegn,i) in insegnamenti">
-                        <th scope="row">{{incrementIndex(i)}}</th>
+                    <tr v-for="insegn in insegnamenti">
+                        <th scope="col"></th>
                         <td>{{insegn.id_corso}}</td>
                         <td>{{insegn.id_docente}}</td>
-                        <td>  <button @click="rimuoviInsegnamenti" type="button">Elimina</button></td>
+                      <!--  <td>  <button @click="rimuoviInsegnamenti" type="button">Elimina</button></td>-->
                     </tr>
                 </table>
                 </section>
-
                 <div class="modal-footer">
                     <input type="id_corso" class="form-control"  v-model="insegnamenti.id_corso" id="id_corso">
                     <label for="id_corso">id corso</label>
@@ -91,11 +88,7 @@
                     <label for="id_docente">id docente</label>
                     <button @click="InserisciInsegnamenti" type="button">Inserisci insegnamenti</button>
                 </div>
-                -->
-
 </div>
-</body>
-</html>
 <script>
     var admin = new Vue ({
         el: '#admin',
@@ -109,14 +102,6 @@
         },
         mounted() {
             this.init();
-        /*    this.InserisciCorso();
-            this.getDocenti();
-            this.InserisciDocenti();
-            this.getInsegnamenti();
-            this.InserisciInsegnamenti();
-            this.rimuoviCorso();
-            this.rimuoviDocenti();
-            this.rimuoviInsegnamenti();*/
         },
         methods: {
             init: function(){
@@ -129,8 +114,8 @@
                     self.docenti = data[2];
                     self.insegnamenti = data[3];
                 })
-            }
-            /*aggiungi corso
+            },
+            /*aggiungi corso*/
             InserisciCorso: function () {
                 var self = this;
                 if (self.corsi.titolo !== "") {
@@ -140,24 +125,13 @@
                         },
                         function (data) {
                             self.corsi = data[3]
+                            window.location.reload();
                         });
                 } else {
                     self.err = "nome gia presente nel db"
                 }
-
-            },*/
-           /* getDocenti: function () {
-                var self = this;
-                $.get(this.link, {
-                        action: 'SHOWDOCENTE',
-                        nome: this.docenti.nome,
-                        cognome: this.docenti.cognome
-                    },
-                    function (data) {
-                        self.docenti[6];
-                    })
-            },*/
-            /*aggiungi docenti
+            },
+            /*aggiungi docenti*/
             InserisciDocenti: function () {
                 var self = this;
                 if (self.docenti.nome !== "" && self.docenti.cognome !== "") {
@@ -168,25 +142,14 @@
                         },
                         function (data) {
                             self.docenti = data[6]
+                            window.location.reload();
                         })
                 }else {
                     self.err = "nome gia presente nel db"
                 }
 
-            },*/
-
-         /*   getInsegnamenti: function () {
-                var self = this;
-                $.get(this.link, {
-                        action: 'SHOWINSEGNAMENTI',
-                        id_corso: this.insegnamenti.id_corso,
-                        id_docente: this.insegnamenti.id_docente,
-                    },
-                    function (data) {
-                        self.insegnamenti[7];
-                    })
-            },*/
-            /*aggiungi insegnamenti
+            },
+            /*aggiungi insegnamenti*/
             InserisciInsegnamenti: function () {
                 var self = this;
                 $.post(this.link, {
@@ -198,13 +161,14 @@
                         self.insegnamenti = data[7]
                         if (self.insegnamenti.id_corso !== "" && self.insegnamenti.id_docente !== "") {
                             self.insegnamenti = data[7]
+                            window.location.reload();
                         } else {
                             self.err = "nome gia presente nel db"
                         }
                     })
-            },
-*/
-          /*  rimuoviCorso: function () {
+            }
+
+        /*   rimuoviCorso: function () {
                 var self = this;
                 if (self.corsi.titolo !== "") {
                     $.post(this.link, {
@@ -212,19 +176,18 @@
                             titolo: this.corsi.titolo
                         },
                         function (data) {
+                            data = JSON.parse(data);
                             if (data == "true") {
                                 alert("rimosso")
                                 window.location.reload(); /*aggiorno la pagina*/
-                       /*     } else {
+                        /*   } else {
                                 self.err = "errore"
                             }
                         });
                 }else{
                     self.err= "non é stato inserito nessun corso"
                 }
-
-
-            },*/
+            },
          /*   rimuoviDocenti: function () {
                 var self = this;
                 if (self.docenti.nome !== "" && self.docenti.cognome !== "") {
@@ -268,5 +231,6 @@
             },*/
         }
     });
-
 </script>
+</body>
+</html>
