--- a/web/admin.html
+++ b/web/admin.html
@@ -26,7 +26,6 @@
                     <tr v-for="corso in corsi">
                         <th scope="col"></th>
                         <td>{{corso.titolo}}</td>
-                       <!-- <td>  <button v-on:click="rimuoviCorso(corso.titolo)" value="Delete" type="button">Elimina</button></td>-->
                     </tr>
                 </table>
                 </section>
@@ -34,6 +33,7 @@
                 <div class="modal-footer">
                     <input type="titolo" class="form-control"  v-model="corsi.titolo" id="titolo">
                     <label for="titolo">Titolo</label>
+                    <button @click="rimuoviCorso" type="button">Elimina</button>
                     <button @click="InserisciCorso" type="button">Inserisci corso</button>
                 </div>
 
@@ -51,7 +51,7 @@
                         <th scope="col"></th>
                         <td>{{doc.nome}}</td>
                         <td>{{doc.cognome}}</td>
-                       <!-- <td>  <button v-on:click="rimuoviDocenti(doc.nome, doc.cognome)" value="Delete" type="button">Elimina</button></td>-->
+
                 </tr>
                 </table>
                 </section>
@@ -59,7 +59,8 @@
                      <input type="nome" class="form-control"  v-model="docenti.nome" id="nome">
                      <label for="nome">Nome</label>
                      <input type="cognome" class="form-control"  v-model="docenti.cognome" id="cognome">
-                     <label for="cognome">Cognome</label>
+                    <label for="cognome">Cognome</label>
+                    <button v-on:click="rimuoviDocenti(nome, cognome)" value="Delete" type="button">Elimina</button>
                      <button @click="InserisciDocenti" type="button">Inserisci docenti</button>
                 </div>
 
@@ -77,7 +78,7 @@
                         <th scope="col"></th>
                         <td>{{insegn.id_corso}}</td>
                         <td>{{insegn.id_docente}}</td>
-                      <!--  <td>  <button @click="rimuoviInsegnamenti" type="button">Elimina</button></td>-->
+
                     </tr>
                 </table>
                 </section>
@@ -86,6 +87,7 @@
                     <label for="id_corso">id corso</label>
                     <input type="id_docente" class="form-control"  v-model="insegnamenti.id_docente" id="id_docente">
                     <label for="id_docente">id docente</label>
+                    <button @click="rimuoviInsegnamenti" type="button">Elimina</button>
                     <button @click="InserisciInsegnamenti" type="button">Inserisci insegnamenti</button>
                 </div>
 </div>
@@ -166,21 +168,21 @@
                             self.err = "nome gia presente nel db"
                         }
                     })
-            }
+            },
 
-        /*   rimuoviCorso: function () {
+          rimuoviCorso: function () {
                 var self = this;
                 if (self.corsi.titolo !== "") {
                     $.post(this.link, {
-                            action: 'RIMUOVICORSO',
+                            action: 'DELETECORSO',
                             titolo: this.corsi.titolo
                         },
                         function (data) {
-                            data = JSON.parse(data);
+                            //data = JSON.parse(data);
                             if (data == "true") {
-                                alert("rimosso")
+                                self.corsi=data[1]
                                 window.location.reload(); /*aggiorno la pagina*/
-                        /*   } else {
+                          } else {
                                 self.err = "errore"
                             }
                         });
@@ -188,11 +190,11 @@
                     self.err= "non é stato inserito nessun corso"
                 }
             },
-         /*   rimuoviDocenti: function () {
+         rimuoviDocenti: function () {
                 var self = this;
                 if (self.docenti.nome !== "" && self.docenti.cognome !== "") {
                     $.post(this.link, {
-                            action: 'RIMUOVIDOC',
+                            action: 'DELETEDOCENTE',
                             nome: this.docenti.nome,
                             cognome: this.docenti.cognome
                         },
@@ -200,7 +202,7 @@
                             if (data == "true") {
                                 alert("rimosso")
                                 window.location.reload(); /*aggiorno la pagina*/
-                          /*  } else {
+                           } else {
                                 self.err = "errore"
                             }
                         });
@@ -212,21 +214,21 @@
             },
             rimuoviInsegnamenti: function () {
                 var self = this;
-                $.post(this.link, {action: 'RIMUOVIINSEGNAMENTI',
+                $.post(this.link, {action: 'DELETEINSEGNAMENTI',
                         id_corso : this.insegnamenti.id_corso,
                         id_docente:this.insegnamenti.id_docente},
                     function (data) {
                         if (data == "true") {
                             alert("rimosso")
                             window.location.reload(); /*aggiorno la pagina*/
-                   /*     } else {
+                       } else {
                             self.err = "errore"
                         }
                     });
 
 
             },
-            isLogged:function(){
+           /* isLogged:function(){
                 return this.logged;
             },*/
         }
